Urbanliving: fix bottom spacing in image overlay

--- a/src/adhocracy/static_src/stylesheets/components/_modals.scss
+++ b/src/adhocracy/static_src/stylesheets/components/_modals.scss
@@ -81,6 +81,7 @@ div.overlay {
 
 #overlay-img img {
     width: 100%;
+    vertical-align: bottom;
 }
 
 #overlay-big.overlay {
